dist/1.0/bin/sample/retrieveUnpackaged/objects/End__c.object
<CustomObject>
    <description>Stores PoP and Interconnection data</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Ends</relationshipLabel>
        <relationshipName>Ends1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address_Book_ID__c</fullName>
        <label>Address Book ID</label>
        <referenceTo>AddressBook__c</referenceTo>
        <relationshipLabel>Ends</relationshipLabel>
        <relationshipName>Ends</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Croatia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Czech Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estonia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greece</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hungary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iran</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kazakhstan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kyrgyzstan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latvia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lithuania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moldova</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Romania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Serbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slovakia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slovenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tajikistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turkey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ukraine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United Kingdom</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_Type__c</fullName>
        <description>GTS PoP
Partner PoP
NNI Node
CPS - Customer Premise Site</description>
        <inlineHelpText>GTS PoP
Partner PoP
NNI Node
CPS - Customer Premise Site</inlineHelpText>
        <label>End Type</label>
        <picklist>
            <picklistValues>
                <fullName>GTS PoP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner PoP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NNI Node</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Postal__c</fullName>
        <label>Postal</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_1__c</fullName>
        <label>Street 1</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_2__c</fullName>
        <label>Street 2</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>End</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>End Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ends</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>